# Super_Bobbys_World_of_Secret_Rooms

./: .env.example  .gitignore  .gitmodules  .replit  ALL_MODULES_FINALIZED.md  ALL_SYSTEMS_COMPLETE.md  API_DOCUMENTATION.md  BOBBYS_WORKSHOP_CURRENT_STATE.md  BUILD_PRODUCTION.md  BUILD_PRODUCTION.ps1  CANONICAL_CONTRACT_IMPLEMENTATION.md  CODE_OF_CONDUCT.md  COMMIT_READY.md  COMPARISON_AND_MERGE_RECOMMENDATION.md  COMPARISON_AND_MERGE_SUMMARY_FINAL.md  COMPLETE_IMPLEMENTATION_FINAL.md  COMPLETE_IMPLEMENTATION_REPORT.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONTINUE_IMPLEMENTATION_PLAN.md  CONTRIBUTING.md  CURRENT_STATUS_AND_NEXT_STEPS.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DOC_MINING_AND_IMPLEMENTATION_SUMMARY.md  Dockerfile.python  FEATURES_IDENTIFIED_SUMMARY.md  FINALIZE_ALL_MODULES.md  FINAL_COMPARISON_AND_PHASE_3_SUMMARY.md  FINAL_IMPLEMENTATION_STATUS.md  FOLDER_COMPARISON_ANALYSIS.md  FOLDER_COMPARISON_SUMMARY.md  FULL_IMPLEMENTATION_SUMMARY.md  GIT_SYNC_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_FINAL.md  IMPLEMENTATION_COMPLETE_STATUS.md  IMPLEMENTATION_CONTINUATION_PLAN.md  IMPLEMENTATION_FINAL_SUMMARY.md  IMPLEMENTATION_PHASES_STATUS.md  IMPLEMENTATION_PROGRESS.md  (+43 more)
.github/: labeler.yml
.github/agents/: api-guardian.agent.md  automation-engineer.agent.md  docs-onboarding.agent.md  prisma-steward.agent.md  rust-forge.agent.md
.github/workflows/: ci.yml  compliance-guard.yml  warp-zone.yml
Bobbys-Workshop--3.0.0/: .gitignore  IMPLEMENTATION_WAVE_2.md  INSTALL_AND_SHORTCUT.md  MARIO_MAKEOVER_REPORT.md  NEW_GUI_IMPLEMENTATION.md  README.md  SUPER_MARIO_MAKEOVER.md  package-lock.json  package.json  start-all-backends.ps1
Bobbys-Workshop--3.0.0/crates/bootforge-usb/bootforge-cli/: Cargo.toml
Bobbys-Workshop--3.0.0/crates/bootforge-usb/bootforge-cli/src/: main.rs
Bobbys-Workshop--3.0.0/database/: schema.sql
Bobbys-Workshop--3.0.0/docs/: 8BIT_UI_GUIDE.md  TRAPDOOR_ADMIN_ARCHITECTURE.md  TRAPDOOR_API.md
Bobbys-Workshop--3.0.0/scripts/: create-desktop-shortcut.ps1  launch-app.ps1  start-all-backends.sh
Bobbys-Workshop--3.0.0/server/: index.js  package-lock.json  package.json
Bobbys-Workshop--3.0.0/src/: App.tsx  index.css
Bobbys-Workshop--3.0.0/src-tauri/: tauri.conf.json
api/: openapi.yaml
apps/workshop-ui/: package-lock.json  package.json  tauri.conf.json  (+1 more)
attached_assets/: Pasted-Alright-locking-it-all-in-Below-is-the-final-concrete-b_1768756736066.txt
backend/: Cargo.toml  Dockerfile  README.md
backend/src/: events.rs  main.rs  plugins.rs
bobby_dev_mode/: api_cli.py
bootforge/: boot_profiles.py  driver_packs.py
client/: Dockerfile  index.html  package.json  tailwind.config.js
dist-installer/: INSTALL.bat  README.md  RUN_PORTABLE.bat  START.bat
docs/: ARCHITECTURE.md  ARCHITECTURE_BLUEPRINT.md  DEVICE_SUPPORT_MATRIX.md  HARDWARE_BOM.md  LEGAL_DISCLAIMERS.md  PLATFORM_ARCHITECTURE.md  universal-device-matrix.json
examples/: god_mode.rs  list_devices.rs  omega_mode.rs  watch_devices.rs
history/: manager.py
mobile_app/: README.md  pubspec.yaml
phoenix/: authority_routing.py  memory_persistence.py  power_star_verification.py
scripts/: android_diagnostics.mjs  build.sh  ios_diagnostics.mjs  populate-device-database.js  test.sh
services/: device-state-schema.json
src/: lib.rs  model.rs  types.rs
(+175 files in other folders)
