[package]
name = "warp-zones-backend"
version = "1.0.0"
edition = "2021"
authors = ["Super Bobby's Workshop Contributors"]
license = "MIT"

[[bin]]
name = "warp-zones-backend"
path = "src/main.rs"

[dependencies]
# Web Framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-stream = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Environment Variables
dotenv = "0.15"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
