[package]
name = "bootforge-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootforgeusb"
path = "src/main.rs"

[dependencies]
libbootforge = { path = "../libbootforge" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
serde_json = "1"
